# api/index.js
@@ -6,6 +6,8 @@ const categoriesRoute = require('./routes/Categories');
 const currenciesRoute = require('./routes/Currencies');
 const typesRoute = require('./routes/Types');
 const prioritiesRoute = require('./routes/Priorities');
+const attachmentsRoute = require('./routes/Attachments');
+const db = require('./db');
 
 const swaggerUi = require('swagger-ui-express')
 const swaggerFile = require('./swagger-output.json')
@@ -25,8 +27,21 @@ app.use('/api/categories', categoriesRoute);
 app.use('/api/currencies', currenciesRoute);
 app.use('/api/types', typesRoute);
 app.use('/api/priorities', prioritiesRoute);
+app.use('/api/attachments', attachmentsRoute);
 
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerFile))
+
+app.get("/api/lastTransaction", (req, res) => {
+    const query = `SELECT ROWID FROM 'transaction' ORDER BY ROWID DESC LIMIT 1`;
+    db.all(query, (err, rows) => {
+        if (err) {
+            console.error(err.message);
+            res.status(400).json({ "error": err.message })
+        }
+        console.log(rows);
+        res.json({ rows })
+    });
+});
 
 app.listen(PORT, () => {
     console.log(`Server running on port ${PORT}`);
