# api/routes/Transactions.js
@@ -5,7 +5,13 @@ const db = require('../db');
 /*TRANSACTIONS */
 /* GET */
 router.get("/list", (req, res) => {
-    const query = `SELECT tr.id, c.id AS 'categoryID', cur.id AS 'currencyID', p.id AS 'priorityID', tp.id AS 'typeID', tr.description, tr.value, c.name AS 'category', cur.name AS 'currency',cur.symbol AS 'currencySymbol',cur.acronym AS 'currencyAcronym' , tp.name AS 'type', p.name AS 'priority', tr.date FROM 'transaction' AS 'tr', 'type' AS 'tp', 'category' AS 'c', 'priority' AS 'p', 'currency' AS 'cur' WHERE tr.categoryID = c.id AND tr.currencyId = cur.id AND tr.typeID = tp.id AND tr.priorityId = p.id;`;
+    const query = `SELECT tr.id, c.id AS 'categoryID', cur.id AS 'currencyID', p.id AS 'priorityID', tp.id AS 'typeID', tr.description, tr.value, c.name AS 'category', cur.name AS 'currency',cur.symbol AS 'currencySymbol',cur.acronym AS 'currencyAcronym' , tp.name AS 'type', p.name AS 'priority', tr.date, att.transactionId AS 'attId', att.url AS 'attUrl'
+    FROM 'transaction' AS 'tr'
+    LEFT JOIN 'type' AS 'tp' ON tp.id=tr.typeID
+    LEFT JOIN 'category' AS 'c' ON c.id=tr.categoryID
+    LEFT JOIN 'priority' AS 'p' ON p.id=tr.priorityId
+    LEFT JOIN 'currency' AS 'cur' ON cur.id=tr.currencyId
+    LEFT JOIN 'attachment' AS 'att' ON att.transactionId=tr.id;`;
     db.all(query, [], (err, rows) => {
         if (err) {
             console.error(err.message);
@@ -19,13 +25,23 @@ router.get("/list", (req, res) => {
 });
 
 router.get("/list/:id", (req, res) => {
-    const query = `SELECT tr.id, tr.description, tr.value, c.name AS 'category', cur.name AS 'currency',cur.symbol AS 'currencySymbol',cur.acronym AS 'currencyAcronym' , tp.name AS 'type', p.name AS 'priority', tr.date FROM 'transaction' AS 'tr', 'type' AS 'tp', 'category' AS 'c', 'priority' AS 'p', 'currency' AS 'cur' WHERE tr.categoryID = c.id AND tr.currencyId = cur.id AND tr.typeID = tp.id AND tr.priorityId = p.id AND tr.id = ${req.params.id};`;
+
+    const query = `
+SELECT tr.id, c.id AS 'categoryID', cur.id AS 'currencyID', p.id AS 'priorityID', tp.id AS 'typeID', tr.description, tr.value, c.name AS 'category', cur.name AS 'currency',cur.symbol AS 'currencySymbol',cur.acronym AS 'currencyAcronym' , tp.name AS 'type', p.name AS 'priority', tr.date, att.transactionId AS 'attId', att.url AS 'attUrl'
+FROM 'transaction' AS 'tr'
+LEFT JOIN 'type' AS 'tp' ON tp.id=tr.typeID
+LEFT JOIN 'category' AS 'c' ON c.id=tr.categoryID
+LEFT JOIN 'priority' AS 'p' ON p.id=tr.priorityId
+LEFT JOIN 'currency' AS 'cur' ON cur.id=tr.currencyId
+LEFT JOIN 'attachment' AS 'att' ON att.transactionId=tr.id
+WHERE tr.id = ${req.params.id}`;
+
     db.all(query, [], (err, rows) => {
         if (err) {
             console.error(err.message);
             res.status(400).json({ "error": err.message })
         }
-            console.log(rows);
+        console.log(rows);
         res.json({ rows })
     });
 });
@@ -102,9 +118,11 @@ router.put("/:id", (req, res, next) => {
                 console.error(err.message);
                 res.status(400).json({ "error": err.message })
             }
-            res.status(201).json({
+            res.status(200).json({
                 "message": `Transaction updated`,
             })
         });
 });
+
+
 module.exports = router;
